src/objects/Contract__x.object
<CustomObject>
    <fields>
        <fullName>Clinical_Opportunity_number_c__c</fullName>
        <externalDeveloperName>Clinical_Opportunity_number__c</externalDeveloperName>
        <label>Clinical Opportunity number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clinical_RBU_NEMEA_c__c</fullName>
        <externalDeveloperName>Clinical_RBU_NEMEA__c</externalDeveloperName>
        <label>Clinical - RBU - NEMEA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Clinical_Trial_Agr_Site_Agr_Incl_in_Con__c</fullName>
        <externalDeveloperName>Clinical_Trial_Agr_Site_Agr_Incl_in_Con__c</externalDeveloperName>
        <label>Clinical Trial Agr(Site Agr)Incl in Con.</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments_c__c</fullName>
        <externalDeveloperName>Comments__c</externalDeveloperName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Commerical_terms_available_for_agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Commerical_terms_available_for_agreement__c</externalDeveloperName>
        <label>Commerical terms available for agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comp_for_Delay_Explanation_c__c</fullName>
        <externalDeveloperName>Comp_for_Delay_Explanation__c</externalDeveloperName>
        <label>Comp. for Delay Explanation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompanySignedDate__c</fullName>
        <externalDeveloperName>CompanySignedDate</externalDeveloperName>
        <label>Company Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CompanySignedId__c</fullName>
        <externalDeveloperName>CompanySignedId</externalDeveloperName>
        <label>Company Signed By ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compensation_for_Delay_req_d_if_agmt_c__c</fullName>
        <externalDeveloperName>Compensation_for_Delay_req_d_if_agmt__c</externalDeveloperName>
        <label>Comp. for Delay (req&apos;d if agmt &gt;$1m)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Complexity_c__c</fullName>
        <externalDeveloperName>Complexity__c</externalDeveloperName>
        <label>Complexity</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comprehensive_Indemnification_Prov_Expl__c</fullName>
        <externalDeveloperName>Comprehensive_Indemnification_Prov_Expl__c</externalDeveloperName>
        <label>Comprehensive Indemnification Prov. Expl</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comprehensive_Indemnification_Provision__c</fullName>
        <externalDeveloperName>Comprehensive_Indemnification_Provision__c</externalDeveloperName>
        <label>Comprehensive Indemnification Provision</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Confidence_in_Approval_of_Budget_Draft_c__c</fullName>
        <externalDeveloperName>Confidence_in_Approval_of_Budget_Draft__c</externalDeveloperName>
        <inlineHelpText>CA &amp; PL confidence customer will agree to budget +/- 30%</inlineHelpText>
        <label>Confidence in Approval of Budget Draft</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Assessed</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Confidential_and_Proprietary_Information__c</fullName>
        <externalDeveloperName>Confidential_and_Proprietary_Information__c</externalDeveloperName>
        <label>Confidential and Proprietary Info Id&apos;d</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Confidential_and_Propriety_Info_Expl_c__c</fullName>
        <externalDeveloperName>Confidential_and_Propriety_Info_Expl__c</externalDeveloperName>
        <label>Confidential and Propriety Info Expl</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consequential_Damages_Disclaimer_Expl_c__c</fullName>
        <externalDeveloperName>Consequential_Damages_Disclaimer_Expl__c</externalDeveloperName>
        <label>Consequential Damages Disclaimer Expl.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consequential_Damages_Disclaimer_c__c</fullName>
        <externalDeveloperName>Consequential_Damages_Disclaimer__c</externalDeveloperName>
        <label>Consequential Damages Disclaimer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contains_First_Quote_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Contains_First_Quote__c</externalDeveloperName>
        <label>zzContains First Quote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ContractNumber__c</fullName>
        <externalDeveloperName>ContractNumber</externalDeveloperName>
        <label>Contract Number</label>
        <length>30</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractTerm__c</fullName>
        <externalDeveloperName>ContractTerm</externalDeveloperName>
        <label>Contract Term</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Box_Name_c__c</fullName>
        <externalDeveloperName>Contract_Box_Name__c</externalDeveloperName>
        <label>Contract Box Name</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Confirmation_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Contract_Confirmation__c</externalDeveloperName>
        <label>*Contract Confirmation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Cycle_Time_c__c</fullName>
        <externalDeveloperName>Contract_Cycle_Time__c</externalDeveloperName>
        <label>Contract Cycle Time</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Document_URL_c__c</fullName>
        <externalDeveloperName>Contract_Document_URL__c</externalDeveloperName>
        <label>Link to Contract</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Contract_Expected_Date_c__c</fullName>
        <externalDeveloperName>Contract_Expected_Date__c</externalDeveloperName>
        <label>Contract Execution Date Actual/Expected</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Grouping_c__c</fullName>
        <externalDeveloperName>Contract_Grouping__c</externalDeveloperName>
        <label>Contract Grouping</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contract_ID_from_Tracker_c__c</fullName>
        <externalDeveloperName>Contract_ID_from_Tracker__c</externalDeveloperName>
        <label>zzContract ID from Tracker</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Ranking_c__c</fullName>
        <externalDeveloperName>Contract_Ranking__c</externalDeveloperName>
        <label>Contract Ranking</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1.1</fullName>
                </value>
                <value>
                    <fullName>1.3</fullName>
                </value>
                <value>
                    <fullName>1.5</fullName>
                </value>
                <value>
                    <fullName>2.1</fullName>
                </value>
                <value>
                    <fullName>2.3</fullName>
                </value>
                <value>
                    <fullName>2.5</fullName>
                </value>
                <value>
                    <fullName>3.1</fullName>
                </value>
                <value>
                    <fullName>3.3</fullName>
                </value>
                <value>
                    <fullName>3.5</fullName>
                </value>
                <value>
                    <fullName>4.1</fullName>
                </value>
                <value>
                    <fullName>4.3</fullName>
                </value>
                <value>
                    <fullName>4.5</fullName>
                </value>
                <value>
                    <fullName>5.1</fullName>
                </value>
                <value>
                    <fullName>5.3</fullName>
                </value>
                <value>
                    <fullName>5.5</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Record_Type_c__c</fullName>
        <externalDeveloperName>Contract_Record_Type__c</externalDeveloperName>
        <label>Contract Record Type</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Status_c__c</fullName>
        <externalDeveloperName>Contract_Status__c</externalDeveloperName>
        <label>Contract Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Template_c__c</fullName>
        <externalDeveloperName>Contract_Template__c</externalDeveloperName>
        <label>Contract Template</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Q Standard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Warning_c__c</fullName>
        <externalDeveloperName>Contract_Warning__c</externalDeveloperName>
        <label>Contract Warning</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contracts_Assistance_Comment_c__c</fullName>
        <externalDeveloperName>Contracts_Assistance_Comment__c</externalDeveloperName>
        <label>Contracts Assistance Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contracts_Component_c__c</fullName>
        <externalDeveloperName>Contracts_Component__c</externalDeveloperName>
        <label>Contracts Component</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single service/Fees &lt;$1M/No TPV</fullName>
                </value>
                <value>
                    <fullName>Full service/Fees $1M-$4M/&lt;2 TPVs</fullName>
                </value>
                <value>
                    <fullName>New customer (no MSA)/Fees $4M-$50M/≥3 TPVs</fullName>
                </value>
                <value>
                    <fullName>RFP 5/&gt;$50M/&gt;1 study program/&gt;1 QIP budget</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Conversion_Rate_China_Region_c__c</fullName>
        <externalDeveloperName>Conversion_Rate_China_Region__c</externalDeveloperName>
        <label>Conversion Rate - China Region</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Conversion_Rate_UK_Region_c__c</fullName>
        <externalDeveloperName>Conversion_Rate_UK_Region__c</externalDeveloperName>
        <label>Conversion Rate - UK Region</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Conversion_Rate_US_Region_c__c</fullName>
        <externalDeveloperName>Conversion_Rate_US_Region__c</externalDeveloperName>
        <label>Conversion Rate - US Region</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Core_Clinical_P_U_Asia_Pac_c__c</fullName>
        <externalDeveloperName>Core_Clinical_P_U_Asia_Pac__c</externalDeveloperName>
        <label>Clinical - RBU - Asia Pac</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Core_Clinical_P_U_EUR_c__c</fullName>
        <externalDeveloperName>Core_Clinical_P_U_EUR__c</externalDeveloperName>
        <label>Clinical - RBU - CESE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Core_Clinical_P_U_Jap_c__c</fullName>
        <externalDeveloperName>Core_Clinical_P_U_Jap__c</externalDeveloperName>
        <label>Clinical - RBU - Jap</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Core_Clinical_P_U_NA_c__c</fullName>
        <externalDeveloperName>Core_Clinical_P_U_NA__c</externalDeveloperName>
        <label>Clinical - RBU - NA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Core_Clinical_P_U_SA_c__c</fullName>
        <externalDeveloperName>Core_Clinical_P_U_SA__c</externalDeveloperName>
        <label>Clinical - RBU - SA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cost_Point_Project_Code_c__c</fullName>
        <externalDeveloperName>Cost_Point_Project_Code__c</externalDeveloperName>
        <inlineHelpText>This field is for use by the Consulting Group</inlineHelpText>
        <label>Cost Point Project Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cover_Affiliates_of_Client_c__c</fullName>
        <externalDeveloperName>Cover_Affiliates_of_Client__c</externalDeveloperName>
        <label>Cover Affiliates of Client?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cover_Affiliates_of_Q2_c__c</fullName>
        <externalDeveloperName>Cover_Affiliates_of_Q2__c</externalDeveloperName>
        <label>Cover Affiliates of Q2?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cover_Affiliates_of_Quintiles_c__c</fullName>
        <externalDeveloperName>Cover_Affiliates_of_Quintiles__c</externalDeveloperName>
        <label>Cover Affiliates of IQVIA?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CreatedById__c</fullName>
        <externalDeveloperName>CreatedById</externalDeveloperName>
        <label>Created By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <externalDeveloperName>CreatedDate</externalDeveloperName>
        <label>Created Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Currency_China_Region_c__c</fullName>
        <externalDeveloperName>Currency_China_Region__c</externalDeveloperName>
        <label>Currency - China Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ARS</fullName>
                </value>
                <value>
                    <fullName>AUD</fullName>
                </value>
                <value>
                    <fullName>BGN</fullName>
                </value>
                <value>
                    <fullName>BRL</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>CHF</fullName>
                </value>
                <value>
                    <fullName>CLP</fullName>
                </value>
                <value>
                    <fullName>CNY</fullName>
                </value>
                <value>
                    <fullName>COP</fullName>
                </value>
                <value>
                    <fullName>CRC</fullName>
                </value>
                <value>
                    <fullName>CZK</fullName>
                </value>
                <value>
                    <fullName>DKK</fullName>
                </value>
                <value>
                    <fullName>EEK</fullName>
                </value>
                <value>
                    <fullName>EGP</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>GHS</fullName>
                </value>
                <value>
                    <fullName>GTQ</fullName>
                </value>
                <value>
                    <fullName>HKD</fullName>
                </value>
                <value>
                    <fullName>HRK</fullName>
                </value>
                <value>
                    <fullName>HUF</fullName>
                </value>
                <value>
                    <fullName>IDR</fullName>
                </value>
                <value>
                    <fullName>ILS</fullName>
                </value>
                <value>
                    <fullName>INR</fullName>
                </value>
                <value>
                    <fullName>JPY</fullName>
                </value>
                <value>
                    <fullName>KES</fullName>
                </value>
                <value>
                    <fullName>KRW</fullName>
                </value>
                <value>
                    <fullName>LKR</fullName>
                </value>
                <value>
                    <fullName>LTL</fullName>
                </value>
                <value>
                    <fullName>LVL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Currency_Ex_Provision_Explanation_c__c</fullName>
        <externalDeveloperName>Currency_Ex_Provision_Explanation__c</externalDeveloperName>
        <label>Currency Ex. Provision Explanation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency_Exchange_Provision_c__c</fullName>
        <externalDeveloperName>Currency_Exchange_Provision__c</externalDeveloperName>
        <label>Currency Ex. Provision (if &gt;$1m foreign)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Currency_UK_Region_c__c</fullName>
        <externalDeveloperName>Currency_UK_Region__c</externalDeveloperName>
        <label>Currency - UK Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ARS</fullName>
                </value>
                <value>
                    <fullName>AUD</fullName>
                </value>
                <value>
                    <fullName>BGN</fullName>
                </value>
                <value>
                    <fullName>BRL</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>CHF</fullName>
                </value>
                <value>
                    <fullName>CLP</fullName>
                </value>
                <value>
                    <fullName>CNY</fullName>
                </value>
                <value>
                    <fullName>COP</fullName>
                </value>
                <value>
                    <fullName>CRC</fullName>
                </value>
                <value>
                    <fullName>CZK</fullName>
                </value>
                <value>
                    <fullName>DKK</fullName>
                </value>
                <value>
                    <fullName>EEK</fullName>
                </value>
                <value>
                    <fullName>EGP</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>GHS</fullName>
                </value>
                <value>
                    <fullName>GTQ</fullName>
                </value>
                <value>
                    <fullName>HKD</fullName>
                </value>
                <value>
                    <fullName>HRK</fullName>
                </value>
                <value>
                    <fullName>HUF</fullName>
                </value>
                <value>
                    <fullName>IDR</fullName>
                </value>
                <value>
                    <fullName>ILS</fullName>
                </value>
                <value>
                    <fullName>INR</fullName>
                </value>
                <value>
                    <fullName>JPY</fullName>
                </value>
                <value>
                    <fullName>KES</fullName>
                </value>
                <value>
                    <fullName>KRW</fullName>
                </value>
                <value>
                    <fullName>LKR</fullName>
                </value>
                <value>
                    <fullName>LTL</fullName>
                </value>
                <value>
                    <fullName>LVL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Currency_US_Region_c__c</fullName>
        <externalDeveloperName>Currency_US_Region__c</externalDeveloperName>
        <label>Currency - US Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ARS</fullName>
                </value>
                <value>
                    <fullName>AUD</fullName>
                </value>
                <value>
                    <fullName>BGN</fullName>
                </value>
                <value>
                    <fullName>BRL</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>CHF</fullName>
                </value>
                <value>
                    <fullName>CLP</fullName>
                </value>
                <value>
                    <fullName>CNY</fullName>
                </value>
                <value>
                    <fullName>COP</fullName>
                </value>
                <value>
                    <fullName>CRC</fullName>
                </value>
                <value>
                    <fullName>CZK</fullName>
                </value>
                <value>
                    <fullName>DKK</fullName>
                </value>
                <value>
                    <fullName>EEK</fullName>
                </value>
                <value>
                    <fullName>EGP</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>GHS</fullName>
                </value>
                <value>
                    <fullName>GTQ</fullName>
                </value>
                <value>
                    <fullName>HKD</fullName>
                </value>
                <value>
                    <fullName>HRK</fullName>
                </value>
                <value>
                    <fullName>HUF</fullName>
                </value>
                <value>
                    <fullName>IDR</fullName>
                </value>
                <value>
                    <fullName>ILS</fullName>
                </value>
                <value>
                    <fullName>INR</fullName>
                </value>
                <value>
                    <fullName>JPY</fullName>
                </value>
                <value>
                    <fullName>KES</fullName>
                </value>
                <value>
                    <fullName>KRW</fullName>
                </value>
                <value>
                    <fullName>LKR</fullName>
                </value>
                <value>
                    <fullName>LTL</fullName>
                </value>
                <value>
                    <fullName>LVL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Currency_exchange_allowed_fluctuation_c__c</fullName>
        <externalDeveloperName>Currency_exchange_allowed_fluctuation__c</externalDeveloperName>
        <label>Currency exchange allowed fluctuation %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Currency_exchange_language_included_c__c</fullName>
        <externalDeveloperName>Currency_exchange_language_included__c</externalDeveloperName>
        <label>Currency exchange language included?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Milestone_c__c</fullName>
        <externalDeveloperName>Current_Milestone__c</externalDeveloperName>
        <label>Current Milestone</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CustomerSignedDate__c</fullName>
        <externalDeveloperName>CustomerSignedDate</externalDeveloperName>
        <inlineHelpText>If there is not a customer signed date on the contract, please populate this field with the Date executed (signed) contract received date.</inlineHelpText>
        <label>Customer Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CustomerSignedId__c</fullName>
        <externalDeveloperName>CustomerSignedId</externalDeveloperName>
        <label>Customer Signed By ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerSignedTitle__c</fullName>
        <externalDeveloperName>CustomerSignedTitle</externalDeveloperName>
        <label>Customer Signed Title</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Contact_Email_c__c</fullName>
        <externalDeveloperName>Customer_Contact_Email__c</externalDeveloperName>
        <label>Customer Contact Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Contract_Manager_Neg_Contact_c__c</fullName>
        <externalDeveloperName>Customer_Contract_Manager_Neg_Contact__c</externalDeveloperName>
        <label>*Customer Contract Manager/Negotiator</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Contract_Manager_Negotiator_c__c</fullName>
        <externalDeveloperName>Customer_Contract_Manager_Negotiator__c</externalDeveloperName>
        <label>Customer Contract Manager/Negotiator</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_ID_Contract_Number_c__c</fullName>
        <externalDeveloperName>Customer_ID_Contract_Number__c</externalDeveloperName>
        <label>Customer ID/Contract Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name_c__c</fullName>
        <externalDeveloperName>Customer_Name__c</externalDeveloperName>
        <label>Customer Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_P_U_Reg_DM_Projects_c__c</fullName>
        <externalDeveloperName>DM_P_U_Reg_DM_Projects__c</externalDeveloperName>
        <label>DSSR - DM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DSSR_CMSVC_c__c</fullName>
        <externalDeveloperName>DSSR_CMSVC__c</externalDeveloperName>
        <label>DSSR - CMSVC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data_Privacy_Lang_incld_c__c</fullName>
        <externalDeveloperName>Data_Privacy_Lang_incld__c</externalDeveloperName>
        <label>Data Privacy Lang incld?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Transfer_Agreement_included_c__c</fullName>
        <externalDeveloperName>Data_Transfer_Agreement_included__c</externalDeveloperName>
        <label>Data Transfer Agreement included?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>